[tool.poetry]
name = "gym-2048"
version = "0.1.0"
description = ""
authors = ["Shuhei Yamashita <yamashita-shuhei@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "gym_2048"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
gymnasium = "^0.28.1"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
