[tool.poetry]
name = "gym-2048"
version = "0.1.0"
description = "Gymanasium environment for the game 2048"
authors = ["Shuhei Yamashita <yamashita-shuhei@g.ecc.u-tokyo.ac.jp>"]
homepage = "https://github.com/shuymst"
repository = "https://github.com/shuymst/gym-2048"
readme = "README.md"
packages = [{include = "gym_2048"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
gymnasium = "^0.28.1"
notebook = "^6.5.4"
tqdm = "^4.65.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.examples.dependencies]
matplotlib = "^3.7.1"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
